fix resposive on mobile

--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -134,6 +134,9 @@
   #services .part {
     width: 100%;
   }
+  .bottom-cv {
+    display: flex;
+  }
 }
 
 /* =============================================================================== */
