--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,7 +35,7 @@ body {
 .bg-img {
   background-image: url("../images/slider-02.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
   height: 100vh;
 }
@@ -227,7 +227,7 @@ hr {
   color: #ffffff;
   display: inline-block;
   margin-right: 10px;
-  padding: 10px 24px;
+  padding: 10px;
 }
 .bottom-cv .hire-me {
   text-decoration: none;
@@ -242,7 +242,7 @@ hr {
 .our-service-parent {
   text-align: center;
   background-color: #f1f1f1;
-  padding: 100px;
+  padding: 60px;
   height: 100%;
 }
 .four-parts {
